Some replacements of SMF with Social Bricks.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# SMF Generated Files #
-#######################
+# Generated Files #
+###################
 agreement.txt
 Settings.php
 Settings_bak.php
